@@ -8,7 +8,7 @@ import org.junit.*;
 
 @SuppressWarnings("static-method") public class singletonTest {
   @Test public void testList() {
-    Integer a = new Integer(3);
+    Integer a = Integer.valueOf(3);
     List<Integer> l = singleton.list(a);
     assertEquals(l.size(), 1);
     assertEquals(l.get(0),a);
@@ -16,8 +16,7 @@ import org.junit.*;
     assertEquals(l.size(), 2);
   }
   @Test public void testArray() {
-    Object a = null;
-    Object[] l = singleton.array(a);
+    Object[] l = singleton.array(null);
     assertEquals(l.length,1);
     Assert.assertEquals(l[0], null);
   }
